--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
-*{
-  font-family: 'Roboto', sans-serif;
+* {
+  font-family: "Roboto", sans-serif;
   font-size: 15px;
 }
 
-label{
+label {
   font-weight: 600;
 }
 
@@ -29,7 +29,8 @@ label{
   color: #000;
 }
 
-.txtInfo,#txtSelect {
+.txtInfo,
+#txtSelect {
   font-size: 20px;
 }
 
@@ -102,11 +103,11 @@ label{
   background-color: #029090;
 }
 
-.legendContainer{
+.legendContainer {
   width: 1200px;
 }
 
-.legend{
+.legend {
   display: flex;
   margin-right: 20px;
   gap: 8px;
@@ -119,17 +120,15 @@ label{
 }
 
 .legend span {
- font-size: 14px;
+  font-size: 14px;
 }
 
-.navbar{
+.navbar {
   background-color: rgb(175, 175, 175);
-  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
--webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
 }
-
-
-/* .start{
-  background-color: #00ff00;
-} */
+#txtDF {
+  line-height: 1;
+}
